--- a/main.ipynb
+++ b/main.ipynb
@@ -6,20 +6,16 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-03-31T16:17:10.925066Z",
-     "start_time": "2025-03-31T16:17:10.355698Z"
+     "end_time": "2025-04-01T18:13:25.021800Z",
+     "start_time": "2025-04-01T18:13:24.391941Z"
     }
    },
    "source": [
     "import warnings\n",
-    "from typing import final\n",
-    "from unicodedata import category\n",
-    "\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
     "!pip install ucimlrepo numpy pandas scipy matplotlib\n",
     "\n",
-    "from ucimlrepo import fetch_ucirepo \n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -50,7 +46,7 @@
      ]
     }
    ],
-   "execution_count": 4
+   "execution_count": 6
   },
   {
    "metadata": {},
@@ -60,22 +56,22 @@
     "Naloga vključuje analizo nabora podatkov, ki vsebuje ocene kakovosti vina, kjer je cilj klasificirati vina v **visoko kakovostna** ali **nizko kakovostna**. Nabor podatkov vsebuje več atributov, povezanih s kemijskimi komponentami vin, kot so `fixed_acidity`, `volatile_acidity`, `citric_acid` itd. Cilj je napovedati kakovost vina na podlagi teh kemijskih lastnosti, pri čemer uporabimo **univariantno analizo**, **WoE (Teža dokaza)** transformacije, izračun **IV (Informacijska vrednost)**, in **coarse classing** za nadaljnje modeliranje v **Bayesovski mreži**.\n",
     "\n",
     "Ocenjevanje kakovosti vina je dano kot celo število med 0 in 10, pri čemer so vina večinoma koncentrirana okoli ocen 5–7. Da bi izboljšali uspešnost modela, smo ustvarili binarno ciljno spremenljivko:  \n",
-    "- `target = 1`, če je `quality ≥ 7` (visoka kakovost)  \n",
-    "- `target = 0`, če je `quality < 7` (nizka kakovost)\n",
+    "- `target = 1`, če je `quality ≥ 6` (visoka kakovost)  \n",
+    "- `target = 0`, če je `quality < 6` (nizka kakovost)\n",
     "\n",
     "# **1. Uvoz podatkov in pregled:**\n",
     "\n",
-    "Podatki uporabljeni v tem raziskovalnem delu so pridobljeni iz spletne strani () ter vsebujejo informacije o kvaliteti različnih vin. Skupno smo iz spletne strani pridobili dve podatkovni zbirki in sicer ločeni za rdeče vino (winequality-red.csv) in belo vino (winequality-white.csv). \n",
+    "Podatki uporabljeni v tem raziskovalnem delu so pridobljeni iz spletne strani (https://archive.ics.uci.edu/dataset/186/wine+quality) ter vsebujejo informacije o kvaliteti različnih vin. Skupno smo iz spletne strani pridobili dve podatkovni zbirki in sicer ločeni za rdeče vino (winequality-red.csv) in belo vino (winequality-white.csv). \n",
     "\n",
-    "Podatke smo združili v eno tabelo ter dodali stolpec, ki določa za katero kategorijo vina gre. "
+    "Podatke smo združili v eno tabelo ter dodali stolpec, ki določa za katero barvo vina gre. "
    ],
    "id": "4b7e7d82683c32a5"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-31T18:08:53.850708Z",
-     "start_time": "2025-03-31T18:08:53.822223Z"
+     "end_time": "2025-04-01T18:13:27.746081Z",
+     "start_time": "2025-04-01T18:13:27.725979Z"
     }
    },
    "cell_type": "code",
@@ -93,7 +89,7 @@
     "df[[\"color\", \"quality\"]] = df[[\"color\", \"quality\"]].astype(\"category\")\n",
     "print(f\"PD ima {df.shape[0]} vrstic in {df.shape[1]} stolpcev\")\n",
     "\n",
-    "df.head()"
+    "df.head(5)"
    ],
    "id": "f5aa98fa454419b6",
    "outputs": [
@@ -248,12 +244,12 @@
        "</div>"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 118
+   "execution_count": 7
   },
   {
    "metadata": {},
@@ -262,15 +258,21 @@
    "id": "332ff0be1779dab1"
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## 2. Analiza podatkov",
+   "id": "9cd591add2f8955d"
+  },
+  {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-31T18:08:56.109841Z",
-     "start_time": "2025-03-31T18:08:56.094672Z"
+     "end_time": "2025-04-01T18:13:29.544486Z",
+     "start_time": "2025-04-01T18:13:29.526948Z"
     }
    },
    "cell_type": "code",
    "source": "df.describe().T",
-   "id": "b322c124932c651d",
+   "id": "73b2e0563aa09c2",
    "outputs": [
     {
      "data": {
@@ -457,18 +459,12 @@
        "</div>"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 119
-  },
-  {
-   "metadata": {},
-   "cell_type": "markdown",
-   "source": "## 2. Analiza podatkov",
-   "id": "9cd591add2f8955d"
+   "execution_count": 8
   },
   {
    "metadata": {},
@@ -485,8 +481,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-31T18:08:58.743269Z",
-     "start_time": "2025-03-31T18:08:58.737097Z"
+     "end_time": "2025-04-01T18:13:31.226536Z",
+     "start_time": "2025-04-01T18:13:31.215967Z"
     }
    },
    "cell_type": "code",
@@ -523,7 +519,7 @@
      ]
     }
    ],
-   "execution_count": 120
+   "execution_count": 9
   },
   {
    "metadata": {},
@@ -553,8 +549,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-31T18:09:00.479726Z",
-     "start_time": "2025-03-31T18:09:00.468380Z"
+     "end_time": "2025-04-01T18:13:36.997380Z",
+     "start_time": "2025-04-01T18:13:36.983337Z"
     }
    },
    "cell_type": "code",
@@ -681,12 +677,12 @@
        "</div>"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 121
+   "execution_count": 11
   },
   {
    "metadata": {},
@@ -694,7 +690,7 @@
    "source": [
     "V podatkih opazimo prisotnost ekstremnih vrednosti v večini spremenljivk, kar pomeni, da so nekateri podatki zelo oddaljeni od povprečja. Kljub temu, da je odstotek ekstremnih vrednosti za večino spremenljivk relativno nizek (manj kot 2%), so nekateri stolpci, kot sta Fixed Acidity in Chlorides, precej bolj občutljivi na odstopanja.\n",
     "\n",
-    "Večje število ekstremnih vrednosti v spremenljivkah, kot so Fixed Acidity (1.97%) in Chlorides (1.65%), nakazuje, da so podatki v teh stolpcih bolj razpršeni, kar pomeni, da se nekatere vrednosti močno oddaljijo od povprečja. Vendar pa Residual Sugar (0.4%) in Total Sulfur Dioxide (0.12%) imata minimalno število ekstremov, kar pomeni, da so ta podatki bolj stabilni in ne izstopajo iz pričakovanih mej.\n",
+    "Večje število ekstremnih vrednosti v spremenljivkah, kot so Fixed Acidity (1.97%) in Chlorides (1.65%), nakazuje, da so podatki v teh stolpcih bolj razpršeni, kar pomeni, da se nekatere vrednosti močno oddaljijo od povprečja. Spremenljivki Residual Sugar (0.4%) in Total Sulfur Dioxide (0.12%) pa imata minimalno število ekstremov, kar pomeni, da so ta podatki bolj stabilni in ne izstopajo iz pričakovanih mej.\n",
     "\n",
     "Čeprav večina ekstremnih vrednosti ne presega 2%, je pomembno, da jih obravnavamo, ker lahko vplivajo na rezultate analiz ali modelov, še posebej pri metodah, ki so občutljive na ekstremne vrednosti. \n",
     "\n",
@@ -711,8 +707,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-31T18:09:03.245281Z",
-     "start_time": "2025-03-31T18:09:02.789649Z"
+     "end_time": "2025-04-01T18:13:40.070884Z",
+     "start_time": "2025-04-01T18:13:39.539251Z"
     }
    },
    "cell_type": "code",
@@ -741,7 +737,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 122
+   "execution_count": 12
   },
   {
    "metadata": {},
@@ -797,8 +793,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-31T18:09:06.292968Z",
-     "start_time": "2025-03-31T18:09:06.282779Z"
+     "end_time": "2025-04-01T18:13:42.826361Z",
+     "start_time": "2025-04-01T18:13:42.812211Z"
     }
    },
    "cell_type": "code",
@@ -951,12 +947,12 @@
        "</div>"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 123
+   "execution_count": 13
   },
   {
    "metadata": {},
@@ -983,8 +979,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-31T18:09:08.966703Z",
-     "start_time": "2025-03-31T18:09:08.278631Z"
+     "end_time": "2025-04-01T18:13:46.272351Z",
+     "start_time": "2025-04-01T18:13:45.863021Z"
     }
    },
    "cell_type": "code",
@@ -1013,7 +1009,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 124
+   "execution_count": 14
   },
   {
    "metadata": {},
@@ -1058,8 +1054,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-31T18:09:12.270450Z",
-     "start_time": "2025-03-31T18:09:12.242123Z"
+     "end_time": "2025-04-01T18:13:49.392560Z",
+     "start_time": "2025-04-01T18:13:49.362344Z"
     }
    },
    "cell_type": "code",
@@ -1254,12 +1250,12 @@
        "</div>"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 125
+   "execution_count": 15
   },
   {
    "metadata": {},
@@ -1274,8 +1270,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-31T18:09:14.284387Z",
-     "start_time": "2025-03-31T18:09:14.279590Z"
+     "end_time": "2025-04-01T18:13:51.837451Z",
+     "start_time": "2025-04-01T18:13:51.831369Z"
     }
    },
    "cell_type": "code",
@@ -1298,7 +1294,7 @@
    ],
    "id": "c74a2995176aa9c4",
    "outputs": [],
-   "execution_count": 126
+   "execution_count": 16
   },
   {
    "metadata": {},
@@ -1309,8 +1305,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-31T18:09:16.081143Z",
-     "start_time": "2025-03-31T18:09:16.064490Z"
+     "end_time": "2025-04-01T18:13:54.580467Z",
+     "start_time": "2025-04-01T18:13:54.564996Z"
     }
    },
    "cell_type": "code",
@@ -1505,12 +1501,12 @@
        "</div>"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 127
+   "execution_count": 17
   },
   {
    "metadata": {},
@@ -1546,8 +1542,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-31T18:21:43.226863Z",
-     "start_time": "2025-03-31T18:21:43.204706Z"
+     "end_time": "2025-04-01T18:14:00.623526Z",
+     "start_time": "2025-04-01T18:14:00.607560Z"
     }
    },
    "cell_type": "code",
@@ -1820,18 +1816,24 @@
        "</div>"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 140
+   "execution_count": 18
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Poglejmo s še distribucijo razredne spremenljivke",
+   "id": "f8e8243d3cbd085b"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-31T18:21:45.767447Z",
-     "start_time": "2025-03-31T18:21:45.709004Z"
+     "end_time": "2025-04-01T18:14:02.950969Z",
+     "start_time": "2025-04-01T18:14:02.892733Z"
     }
    },
    "cell_type": "code",
@@ -1857,7 +1859,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 141
+   "execution_count": 19
   },
   {
    "metadata": {},
@@ -1939,8 +1941,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-31T18:23:08.218297Z",
-     "start_time": "2025-03-31T18:23:08.212253Z"
+     "end_time": "2025-04-01T18:14:07.441522Z",
+     "start_time": "2025-04-01T18:14:07.435807Z"
     }
    },
    "cell_type": "code",
@@ -1982,13 +1984,13 @@
    ],
    "id": "bf840de741f6fc83",
    "outputs": [],
-   "execution_count": 146
+   "execution_count": 20
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-31T18:24:26.122946Z",
-     "start_time": "2025-03-31T18:24:26.052621Z"
+     "end_time": "2025-04-01T18:14:09.608091Z",
+     "start_time": "2025-04-01T18:14:09.548673Z"
     }
    },
    "cell_type": "code",
@@ -2075,7 +2077,7 @@
      ]
     }
    ],
-   "execution_count": 149
+   "execution_count": 21
   },
   {
    "metadata": {},
@@ -2096,7 +2098,7 @@
     "\n",
     "### 4.2 Izbor spremenljivk\n",
     "\n",
-    "Na podlagi IV vrednosti in WoE bomo za model izbrali naslednje spremenljivke:\n",
+    "Na podlagi IV vrednosti bomo za model izbrali naslednje spremenljivke:\n",
     "- **Alkohol**: Najmočnejši napovednik, zato bo nujen za model.\n",
     "- **Gostota**: Močno napovedna, z visoko IV vrednostjo, zato jo bomo vključili.\n",
     "- **Volatilna kislost**: Ima pomembno IV vrednost, kar pomeni, da ima močan vpliv na kakovost vina.\n",
@@ -2110,8 +2112,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-31T18:33:36.431344Z",
-     "start_time": "2025-03-31T18:33:36.422349Z"
+     "end_time": "2025-04-01T18:14:14.073661Z",
+     "start_time": "2025-04-01T18:14:14.059729Z"
     }
    },
    "cell_type": "code",
@@ -2273,12 +2275,12 @@
        "</div>"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 154
+   "execution_count": 22
   },
   {
    "metadata": {},
@@ -2297,8 +2299,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-31T18:35:11.577509Z",
-     "start_time": "2025-03-31T18:35:11.534979Z"
+     "end_time": "2025-04-01T18:14:17.242174Z",
+     "start_time": "2025-04-01T18:14:17.207744Z"
     }
    },
    "cell_type": "code",
@@ -2570,12 +2572,12 @@
        "</div>"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 156
+   "execution_count": 23
   },
   {
    "metadata": {},
@@ -2586,8 +2588,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-31T18:38:19.577694Z",
-     "start_time": "2025-03-31T18:38:19.526609Z"
+     "end_time": "2025-04-01T18:14:20.214942Z",
+     "start_time": "2025-04-01T18:14:20.174609Z"
     }
    },
    "cell_type": "code",
@@ -2770,12 +2772,12 @@
        "</div>"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 157
+   "execution_count": 24
   },
   {
    "metadata": {},
@@ -2786,15 +2788,15 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-31T18:39:10.818370Z",
-     "start_time": "2025-03-31T18:39:10.785866Z"
+     "end_time": "2025-04-01T18:14:47.731257Z",
+     "start_time": "2025-04-01T18:14:47.700804Z"
     }
    },
    "cell_type": "code",
    "source": "df_woe.to_csv('woe_coarse_df.csv', index=False)",
    "id": "c3da8cbcf4262e24",
    "outputs": [],
-   "execution_count": 158
+   "execution_count": 26
   },
   {
    "metadata": {},
